# qa-portfolio

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
appium-mobile-tests/: README.md  build.gradle
buildSrc/: build.gradle
jmeter-performance-tests/: README.md  build.gradle
playwright-tests/: .prettierignore  README.md  build.gradle  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.eslint.json  tsconfig.json
postman-api-tests/: README.md  build.gradle  package-lock.json  package.json
python-api-tests/: README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
python-api-tests/python_api_tests/: __init__.py
python-api-tests/python_api_tests/clients/: __init__.py  booking_api_client.py
python-api-tests/python_api_tests/config/: __init__.py  settings.py
python-api-tests/python_api_tests/models/: __init__.py  booking_models.py
python-api-tests/python_api_tests/utils/: __init__.py  assertions.py  data_factory.py
python-api-tests/schemas/: auth_token_response_schema.json  booking_schema.json  booking_update_response_schema.json  branding_response_schema.json  error_response_schema.json  health_response_schema.json  messages_response_schema.json  rooms_response_schema.json  validation_errors_response_schema.json
python-api-tests/tests/: conftest.py  test_auth.py  test_booking_api_client_unit.py  test_booking_crud.py  test_contract_validation.py  test_data_factory_unit.py  test_negative_cases.py
rest-assured-api-tests/: README.md  build.gradle
selenium-web-tests/: README.md  (+1 more)
(+119 files in other folders)
